# Fine-tuning-LLMs-HF-

./: .gitignore  README.md  pyproject.toml  requirements-gguf.txt
Ai Docs/: blog-fine-tuning-qwen35-x-linkedin-seo.md
notebooks/: qwen35_brand_voice_llamacpp_experiment.ipynb
scripts/: __init__.py  apply_review_sheet.py  build_blind_review_sheet.py  build_eval_suite.py  build_sft_dataset.py  compare_llamacpp_models.py  download_llama_models.sh  experiment_config.py  export_review_sheet.py  install_heretic.sh  llama9b_agent_smoke_test.py  llama9b_file_agent.py  prep_social_exports.py  render_run1_report.py  run_codex_qwen35_9b.sh  run_llamacpp_suite.py  run_run1_posttrain.py  score_human_eval.py  score_memorization.py  setup_codex_qwen35_9b_provider.sh  start_llama_server.sh  start_qwen35_9b_codex_server.sh
tests/: test_build_eval_suite.py  test_build_sft_dataset.py  test_human_eval.py  test_prep_social_exports.py  test_review_workflow.py  test_score_memorization.py
