[project]
name = "qwen35-brand-voice-experiments"
version = "0.1.0"
description = "Brand voice fine-tuning and llama.cpp evaluation for Qwen3.5"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [

]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 88
